<resources>
    <string name="app_name">CPR Scouting App</string>
    <string name="app_version">Version:</string>
    <string name="preference_setting_file_key">com.cpr3663.cpr_scouting_app.PREFERENCE_FILE_KEY</string>

    <string name="button_start_match">Start Match</string>
    <string name="button_start_teleop">Start Teleop</string>
    <string name="button_end_match">End Match</string>
    <string name="button_match_next">Next</string>
    <string name="button_back">Back</string>
    <string name="switch_on_defense">On\nDefense</string>
    <string name="switch_is_defended">Is\nDefended</string>
    <string name="switch_not_moving">Not\nMoving</string>
    <string name="practice">PRACTICE</string>
    <string name="button_undo">Undo</string>

    <string name="loading_teams">Loading Team Data…</string>
    <string name="loading_matches">Loading Match Data…</string>
    <string name="loading_events_auto">Loading Auto Event Data…</string>
    <string name="loading_events_teleop">Loading Teleop Event Data…</string>
    <string name="loading_competitions">Loading Competition Data…</string>
    <string name="loading_devices">Loading Device Data…</string>
    <string name="loading_comments">Loading Comment Data…</string>
    <string name="loading_trap_results">Loading Trap Results Data…</string>
    <string name="loading_climb_positions">Loading Climbing Positions Data…</string>
    <string name="loading_start_positions">Loading Starting Positions Data…</string>
    <string name="loading_colors">Loading Color Data…</string>

    <string name="missing_data">Please fill in all fields</string>
    <string name="status_text_label">Last event:</string>
    <string name="status_practice">-=- PRACTICE MODE -=-</string>

    <string name="file_error_teams">Error loading teams from data file!</string>
    <string name="file_error_matches">Error loading matches from data file!</string>
    <string name="file_error_events_auto">Error loading Auto events from data file!</string>
    <string name="file_error_events_teleop">Error loading Teleop events from data file!</string>
    <string name="file_error_competitions">Error loading competitions from data file!</string>
    <string name="file_error_devices">Error loading devices from data file!</string>
    <string name="file_error_comments">Error loading comments from data file!</string>
    <string name="file_error_trap_results">Error loading trap results from data file!</string>
    <string name="file_error_climb_positions">Error loading climbing positions from data file!</string>
    <string name="file_error_start_positions">Error loading starting positions from data file!</string>
    <string name="file_error_colors">Error loading colors from data file!</string>

    <string name="settings_heading">Settings</string>
    <string name="settings_competition">Competition:</string>
    <string name="settings_device">Device:</string>
    <string name="settings_team_pref">Preferred team position:</string>
    <string name="settings_scouting_team">Scouting team number:</string>
    <string name="settings_num_files"># of matches to keep:</string>
    <string name="settings_color">Color palette:</string>

    <string name="pre_heading">Pre-Match Scouting Information</string>
    <string name="pre_match_num">Match number:</string>
    <string name="pre_team_num">Team number to scout:</string>
    <string name="pre_scouter">Scouter name:</string>
    <string name="pre_did_play">Did they play?</string>
    <string name="pre_start_note">Starting with a note?</string>
    <string name="pre_start_pos">Starting position:</string>
    <string name="pre_override">Override Team Number</string>
    <string name="pre_new_team_num">Team number:</string>
    <string name="pre_resubmit">Need to re-submit data? (or Quit?)</string>
    <string name="pre_practice">Practice Mode</string>

    <string name="match_bad_undo">Unable to UNDO the last event!</string>

    <string name="post_heading">Post-Match Scouting Information</string>
    <string name="post_left_start_zone">Left the starting zone?</string>
    <string name="post_climb_position">Climbing position:</string>
    <string name="post_trap">Trap outcome:</string>
    <string name="post_comments">Comments:</string>
    <string name="post_reset">Field Fault - Reset Match</string>
    <string name="post_but_reset">Reset</string>
    <string name="post_but_submit">Submit</string>

    <string name="submit_heading">Submit Scouting Data</string>
    <string name="submit_match_error">Incomplete data files found!</string>

    <string name="dropdown_items_selected">selected</string>
    <string name="dropdown_no_items">None</string>

    <string name="alert_quit_title">Quit app</string>
    <string name="alert_quit_message">Are you sure you want to Quit the app?</string>
    <string name="alert_quit_positive">Quit</string>
    <string name="alert_endMatch_title">End Match</string>
    <string name="alert_endMatch_message">Are you sure you want to End the Match early? This cannot be undone.</string>
    <string name="alert_endMatch_positive">End</string>
    <string name="alert_cancel">Cancel</string>
</resources>
