<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/cpr_bkgnd">

    <!-- Competition -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:gravity="end|center"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/settings_competition"
            tools:ignore="RtlSymmetry" />
        <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <Spinner
                android:id="@+id/spinner_Competition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:paddingEnd="10dp"
                android:src="@drawable/cpr_drop_down_arrow"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Device -->
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:gravity="end|center"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/settings_device"
            tools:ignore="RtlSymmetry" />
        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <Spinner
                android:id="@+id/spinner_Device"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:paddingEnd="10dp"
                android:src="@drawable/cpr_drop_down_arrow"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Scouting Team -->
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:gravity="end|center"
            android:paddingEnd="20dp"
            android:text="@string/settings_scouting_team"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:id="@+id/edit_ScoutingTeam"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:autofillHints="Enter Scouting team number here"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/cpr_bkgnd"
            android:background="@color/white"
            android:textSize="24sp"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/text_ScoutingTeamName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:textColor="@color/light_grey"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Num Matches -->
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:gravity="end|center"
            android:paddingEnd="20dp"
            android:text="@string/settings_num_files"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:id="@+id/edit_NumMatches"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:autofillHints="Enter number of matches to keep"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/cpr_bkgnd"
            android:background="@color/white"
            android:textSize="24sp"
            tools:ignore="LabelFor" />
    </LinearLayout>

</LinearLayout>