<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_match"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cpr_bkgnd"
    tools:context=".PostMatch">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-166dp">

        <TextView
            android:id="@+id/text_Heading"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/post_heading"
            android:textColor="@color/cpr_green"
            android:textSize="42sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_DidLeave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="end|center"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/post_left_start_zone"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_LeaveStartPadding"
                android:layout_width="570dp"
                android:layout_height="60dp"
                android:gravity="end|center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_ClimbPosition"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:gravity="end|center"
                android:paddingEnd="50dp"
                android:text="@string/post_climb_position"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />

            <Spinner
                android:id="@+id/spinnerClimbPosition"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:gravity="right|center"
                android:paddingRight="50dp"
                android:textColor="@color/cpr_bkgnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_ClimbPositionPadding"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_Trap"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:gravity="end|center"
                android:paddingEnd="50dp"
                android:text="@string/post_trap"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />

            <Spinner
                android:id="@+id/spinnerTrap"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:gravity="right|center"
                android:paddingRight="50dp"
                android:textColor="@color/cpr_bkgnd"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/text_TrapPadding"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_DNP"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:gravity="end|center"
                android:paddingEnd="50dp"
                android:text="@string/post_dnp"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/drop_DNP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:inputType="text"
                android:text="Multiselect Dropdown"
                android:textColor="@color/cpr_bkgnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_DNPPadding"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_Comments"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:gravity="end|center"
                android:paddingEnd="50dp"
                android:text="@string/post_comments"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="visible"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/drop_Comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:inputType="text"
                android:text="Multiselect Dropdown"
                android:textColor="@color/cpr_bkgnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_CommentsPadding"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/but_Next"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:text="Next"
        android:textSize="28sp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/cpr_bkgnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>