<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pre_match"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cpr_bkgnd"
    tools:context=".activities.PreMatch">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_Heading"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/pre_heading"
            android:textColor="@color/cpr_green"
            android:textSize="42sp" />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_Competition"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:gravity="end|center"
                android:paddingEnd="50dp"
                android:text="@string/pre_match_comp"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/text_Competition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_Match"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:gravity="end|center"
                android:paddingEnd="50dp"
                android:text="@string/pre_match_num"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edit_Match"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/cpr_bkgnd"
                android:textSize="24sp"
                tools:ignore="LabelFor" />

            <RelativeLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_MatchType"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/white"
                    android:gravity="end|center"
                    android:paddingStart="10dp"
                    android:spinnerMode="dropdown"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:src="@drawable/cpr_drop_down_arrow"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <CheckBox
                android:id="@+id/checkbox_Practice"
                android:layout_marginStart="125dp"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center|end"
                android:paddingEnd="20dp"
                android:text="@string/pre_practice"
                android:textColor="@color/dark_green"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/text_TeamToScout"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:gravity="end|center"
                android:paddingEnd="50dp"
                android:text="@string/pre_team_num"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_TeamToScout"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/white"
                    android:gravity="end|center"
                    android:paddingStart="10dp"
                    android:spinnerMode="dropdown"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:src="@drawable/cpr_drop_down_arrow"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <TextView
                android:id="@+id/text_TeamToScoutName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_ScouterName"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:gravity="end|center"
                android:paddingEnd="50dp"
                android:text="@string/pre_scouter"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edit_ScouterName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:inputType="text"
                android:textColor="@color/cpr_bkgnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_ScouterNamePadding"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_DidPlay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="end|center"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/pre_did_play"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_DidPlayPadding"
                android:layout_width="630dp"
                android:layout_height="match_parent"
                android:gravity="end|center"
                android:paddingEnd="50dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_StartGamePiece"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:paddingStart="0dp"
                android:paddingEnd="50dp"
                android:text="@string/pre_start_with_game_piece"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_numStartingGamePiece"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/cpr_bkgnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_StartGamePiecePadding"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end|center"
                android:paddingEnd="300dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_ShadowModeL"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:textColor="#FF5722"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_ShadowModeR"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:textColor="#FF5722"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_Override"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:text="Override"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/white"
        android:backgroundTint="@color/cpr_green"
        tools:ignore="HardcodedText,MissingConstraints"
        app:cornerRadius="16dp"/>

    <TextView
        android:id="@+id/text_Override"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="5dp"
        android:textSize="16sp"
        android:text="@string/pre_override"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/but_Override"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/checkbox_Resubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF5722"
        android:gravity="bottom"
        android:paddingStart="10dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:text="@string/pre_resubmit"
        app:layout_constraintBottom_toTopOf="@id/but_Override"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_Next"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:text="Next"
        android:textSize="28sp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/cpr_bkgnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="HardcodedText,MissingConstraints"
        app:cornerRadius="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>